superset/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: earney
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: earney
    nginx.org/websocket-services: earney
    nginx.ingress.kubernetes.io/auth-url: "https://auth.terranblake.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.terranblake.com/oauth2/start?rd=https://superset.terranblake.com/"
spec:
  tls:
    - hosts:
        - superset.terranblake.com
      secretName: superset-tls
  rules:
    - host: superset.terranblake.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset
                port:
                  number: 8088
